@@ -1,3 +1,10 @@
+2016-01-28  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
+
+	Fixed distcheck errors.
+	* crt1/iosym/Makefile.am (EXTRA_DIST): Add missed device files.
+	* devtools/Device.am: Donot distribute libdev and lib<dev> sources.
+	* libc/Makefile.am (DIST_SUBDIRS): Add misc directory for distribution.
+
 2016-01-25  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
 
 	* configure.ac: Add ATA6612C, ATA6617C, ATA664251, ATmega48PB and
